profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_1/run_3_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci, input size: 20
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 20; module.fibonacci(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.041121753692627 for 0.22549832 sec of execution.
